syntax = "proto3";

package config;

option go_package = "bfs/config";

message HostStatus {
  string id = 1;
  int64 firstSeen = 4;
  int64 lastSeen = 5;
  repeated PhysicalVolumeStatus volumeStats = 6;
}

message FileSystemStatus {
  string devicePath = 1;
  string mountPath = 2;
  uint32 blockSize = 3;
  uint64 blocks = 4;
  uint64 blocksFree = 5;
  uint64 blocksAvailable = 6;
  uint64 files = 7;
  uint64 filesFree = 8;
  int32 ioSize = 9;
}

message PhysicalVolumeStatus {
  string id = 1;
  string path = 2;
  FileSystemStatus fileSystemStatus = 3;
}

message BlockServiceConfig {
  string bindAddress = 1;
  repeated PhysicalVolumeConfig volumeConfigs = 2;
}

message NameServiceConfig {
  string bindAddress = 1;
  string advertiseAddress = 2;
  string path = 3;
}

message PhysicalVolumeConfig {
  string id = 1;
  string path = 2;
  bool allowAutoInitialize = 3;
  repeated Label labels = 4;
}

message LogicalVolumeConfig {
  string id = 1;
  repeated string pvIds = 2;
  repeated Label labels = 3;
}

message HostConfig {
  string id = 1;
  string hostname = 2;
  BlockServiceConfig blockServiceConfig = 3;
  NameServiceConfig nameServiceConfig = 4;
  repeated Label labels = 6;
}

message Label {
  string key = 1;
  string value = 2;
}
