syntax = "proto3";

package registryservice;

option go_package = "bfs/registryservice";

message HostStatus {
  string id = 1;
  string hostname = 2;
  uint32 port = 3;
  int64 firstSeen = 4;
  int64 lastSeen = 5;
  repeated PhysicalVolumeStatus volumeStats = 6;
}

message FileSystemStatus {
  string devicePath = 1;
  string mountPath = 2;
  uint32 blockSize = 3;
  uint64 blocks = 4;
  uint64 blocksFree = 5;
  uint64 blocksAvailable = 6;
  uint64 files = 7;
  uint64 filesFree = 8;
  int32 ioSize = 9;
}

message PhysicalVolumeStatus {
  string id = 1;
  string path = 2;
  FileSystemStatus fileSystemStatus = 3;
}

message HostStatusRequest {
  string id = 1;
  string hostname = 2;
  uint32 port = 3;
  repeated PhysicalVolumeStatus volumeStats = 4;
}

message HostStatusResponse {
  uint32 reportDuration = 1;
}

message HostsRequest {
  string selector = 1;
}

message HostsResponse {
  repeated HostStatus hosts = 1;
}

service RegistryService {
  rpc HostStatus (HostStatusRequest) returns (HostStatusResponse);
  rpc Hosts (HostsRequest) returns (HostsResponse);
}
